# Tendor-Project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_pipeline.py  write_up.md
docs/adr/: 0001-evaluation-design.md  0002-three-arm-evaluation.md
docs/diagrams/: pipeline.drawio
documents/: 04_edge_cityofsydney_agenda.html
src/: evaluate.py  extract.py  metrics.py  parse.py
tests/: conftest.py  test_extract.py  test_metrics.py  test_parse.py
