[project]
name = "tendor-poc"
version = "0.1.0"
description = "Document parsing comparison for procurement signal extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "langextract",
    "python-dotenv>=1.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.1.1",
]
